--- a/main.html
+++ b/main.html
@@ -3,6 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+    rel="icon"
+    href="favicon.ico"
+    type="image/x-icon"
+  />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Image Generator</title>
     <!-- Font Awesome for icons -->
