--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lynx Tools - AI Image Generation</title>
+     <title>Lynx Tools • AI Image Generation Platform</title>
+    <meta name="description" content="VIREON AI - Transform Your Ideas Into Art. Create stunning AI-generated artwork in seconds with our powerful image generation platform." />
+    <meta name="keywords" content="AI, Image Generation, Art, VIREON AI, Lynx Tools" />
+    <meta name="author" content="Lynx Tools" />
+    <meta name="robots" content="index, follow" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
