--- a/index.html
+++ b/index.html
@@ -12,9 +12,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>Lynx Tools • AI Image Generation Platform</title>
     <meta name="description" content="VIREON AI - Transform Your Ideas Into Art. Create stunning AI-generated artwork in seconds with our powerful image generation platform." />
-    <meta name="keywords" content="AI, Image Generation, Art, VIREON AI, Lynx Tools" />
-    <meta name="author" content="Lynx Tools" />
-    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Lynx Tools Team">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://vireon-ai.netlify.app/index.html">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type"        content="website">
+  <meta property="og:url"         content="https://vireon-ai.netlify.app/index.html">
+  <meta property="og:title"       content="Lynx Tools • AI Image Generation">
+  <meta property="og:description" content="Generate stunning AI‑powered images from text prompts in seconds. Choose models, formats, and export in high‑res.">
+
+
+  <!-- Twitter -->
+  <meta name="twitter:card"        content="summary_large_image">
+  <meta name="twitter:url"         content="https://vireon-ai.netlify.app/index.html">
+  <meta name="twitter:title"       content="Lynx Tools • AI Image Generation">
+  <meta name="twitter:description" content="Create high‑quality AI artwork instantly with Lynx Tools. Multiple styles, fast renders, and easy downloads.">
+  
+  <!-- (Optional) JSON‑LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://yourdomain.com/",
+    "name": "Lynx Tools",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://vireon-ai.netlify.app/?s={search_term}",
+      "query-input": "required name=search_term"
+    }
+  }
+  </script>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
